--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>la_boutique_chine - Votre style commence ici...</title>
+    <meta name="description" content="LaBoutiqueChine, vos achats détaillés et en gros avec livraison rapide et service client dédié." />
   </head>
   <body>
     <div id="app"></div>
